minor typo fixes

--- a/paper/noisy_kids.tex
+++ b/paper/noisy_kids.tex
@@ -74,23 +74,23 @@ We created a paradigm that allowed independent manipulation of both expectations
 \subsection{Method}
 \subsubsection{Participants}
 
-Adult participants for Experiment 1 were recruited through Amazon Mechnical Turk. We posted 50 Human Intelligence Tasks (HITs) to be completed only by participants with US IP addresses that each paid 30 cents. A total of 50 HITs were posted, with Speaker condition assigned randomly to each participant.
+Adult participants for Experiment 1 were recruited through Amazon Mechanical Turk. We posted 50 Human Intelligence Tasks (HITs) to be completed only by participants with US IP addresses that each paid 30 cents. A total of 50 HITs were posted, with Speaker condition assigned randomly to each participant.
 
-Children were recruited at the Bing Nursery School on Stanford's campus. Each child was asked if they would be willing to play a game with the experimenter, and informed that they could stop playing at any time. Children were randomly assigned to speaker conditions, and we collected data until there were at least 20 participants in each condition. Data from a total of 43 children was collected; children were all between 4 and 6 years old, and approximately half were female. Neither age nor sex distribution varied significantly across conditions (Plausible: 23 children (12 girls), Mean age = 4.6 years (range = 4.0--5.3 years), Implausible: 20 children (10 girls), Mean age = 4.7 years (range = 4.1--5.4 years).
+Children were recruited at the Bing Nursery School on Stanford's campus. Each child was asked if they would be willing to play a game with the experimenter, and informed that they could stop playing at any time. Children were randomly assigned to speaker conditions, and we collected data until there were at least 20 participants in each condition. Data from a total of 43 children were collected; children were all between 4 and 6 years old, and approximately half were female. Neither age nor sex distribution varied significantly across conditions (Plausible: 23 children (12 girls), Mean age = 4.6 years (range = 4.0--5.3 years), Implausible: 20 children (10 girls), Mean age = 4.7 years (range = 4.1--5.4 years)).
 
 \subsubsection{Stimuli, Design, and Procedure}
 
 Experiment 1 consisted of a series of trials on which participants saw two pictures and heard a sentence referring to one of them.\footnote{All stimuli, as well as data and analyses are available in a public repository at \small{\tt{http://github.com/dyurovsky/noisy-kids}}.} Pictures were constructed from clipart freely available on the internet, and audio was recorded by a female native speaker of English. In order to increase the ambiguity of the spoken utterances, and thus give us more power to detect error-correction, all of the audio recordings were convolved with a small amount of Brown noise.
 
-Each trial contained one semantically plausible picture and one semantically implausible picture. On Exposure trials, these pictures and their corresponding referring expressions were highly distinct (Figure~\ref{fig:exposure}). In contrast, on Test trials the two pictures corresponded to referring expressions that were only one consonant or vowel apart (Figure~\ref{fig:test}). Each participant saw eight Exposure trials, followed by seven Test trials. The order of these trials within each of these two blocks was randomized across participants, as was the on-screen position of the two pictures on each trial. For participants in the Plausible Speaker condition, the speaker referred to plausible referent on each of the eight Exposure trials. In contrast, for participants in the Implausible Speaker condition, the speaker referred to the implausible referent on each Exposure trial. In both conditions, the speaker referred to the implausible referent on all eight Test trials.
+Each trial contained one semantically plausible picture and one semantically implausible picture. On Exposure trials, these pictures and their corresponding referring expressions were highly distinct (Figure~\ref{fig:exposure}). In contrast, on Test trials the two pictures corresponded to referring expressions that were only one consonant or vowel apart (Figure~\ref{fig:test}). Each participant saw eight Exposure trials, followed by seven Test trials. The order of these trials within each of these two blocks was randomized across participants, as was the on-screen position of the two pictures on each trial. For participants in the Plausible Speaker condition, the speaker referred to the plausible referent on each of the eight Exposure trials. In contrast, for participants in the Implausible Speaker condition, the speaker referred to the implausible referent on each Exposure trial. In both conditions, the speaker referred to the implausible referent on all eight Test trials.
 
-For all participants, the experiment began with a short introduction to Katie, the speaker who would be referring to pictures for the remainder of the task. After this introduction, participants completed the remaining trials, responding either with the mouse (adults), or by touching one of the pictures on an iPad (children). Adults were instructed by a series of written prompts; children were given instructions by a live experimenter.\footnote{For a small subset of participants (N=CHECKME), a software bug meant that responses were not tracked automatically and were post-coded from videotapes.}
+For all participants, the experiment began with a short introduction to Katie, the speaker who would be referring to pictures for the remainder of the task. After this introduction, participants completed the remaining trials, responding either with the mouse (adults), or by touching one of the pictures on an iPad (children). Adults were instructed by a series of written prompts; children were given instructions by a live experimenter.\footnote{For a small subset of participants (N=3), a software bug meant that responses were not tracked automatically and were post-coded from videotapes.}
 
 \subsection{Results}
 
-In order to validate our manipulation, we first analyze the effect of the speaker on Exposure trials. If participants were attending to the speaker's requests during Exposure trials, those in the Plausible condition should have chosen the plausible referent (kittens) and those in the Implausible condition should have chosen the implausible referent (hammers). We provide two convergent analysis that show that they did. 
+In order to validate our manipulation, we first analyze the effect of the speaker on Exposure trials. If participants were attending to the speaker's requests during Exposure trials, those in the Plausible condition should have chosen the plausible referent (e.g. kittens) and those in the Implausible condition should have chosen the implausible referent (e.g. hammers). We provide two convergent analysis that show that they did. 
 
-First, we asked whether participants selected the correct referent in each condition at levels different from chance. We submitted performance for each group and condition separately to a mixed-effects logistic regression with random effects of subject and trial. Both children and adults were significantly more likely to choose the plausible referent in the Plausible condition ($\beta_{adult} = 5.66$, $z = 6.76$, $p <.001$; $\beta_{child} = 2.62$, $z = 5.43$, $p <.001$), and significantly less likely than chance to choose the plausible referent in the Implausible condition ($\beta_{adult} = -3.87$, $z = -7.13$, $p <.001$; $\beta_{child} = -1.9$, $z = 5.61$, $p <.001$). Second, we compared performance across conditions, fitting a mixed-effects regression predicting choice on Exposure trials from group, condition, and their interaction, and found significant effects of all three ($\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$, $\beta_{Plausible Speaker} = 9.52$,  $z = 7.87$, $p <.001$,  $\beta_{child\: x \: condition} = -5$,  $z = -4.12$, $p <.001$). Thus, both children and adults were sensitive to the speaker manipulation during Exposure trials, selecting the appropriate referent whether or not the request was implausible (although adults selected the correct referent more often in both conditions).
+First, we asked whether participants selected the correct referent in each condition at levels different from chance. We submitted performance for each age group and condition separately to a mixed-effects logistic regression with random effects of subject and trial. Both children and adults were significantly more likely to choose the plausible referent in the Plausible condition ($\beta_{adult} = 5.66$, $z = 6.76$, $p <.001$; $\beta_{child} = 2.62$, $z = 5.43$, $p <.001$), and significantly less likely than chance to choose the plausible referent in the Implausible condition ($\beta_{adult} = -3.87$, $z = -7.13$, $p <.001$; $\beta_{child} = -1.9$, $z = 5.61$, $p <.001$). Second, we compared performance across conditions, fitting a mixed-effects regression predicting choice on Exposure trials from group, condition, and their interaction, and found significant effects of all three ($\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$, $\beta_{Plausible Speaker} = 9.52$,  $z = 7.87$, $p <.001$,  $\beta_{child\: x \: condition} = -5$,  $z = -4.12$, $p <.001$). Thus, both children and adults were sensitive to the speaker manipulation during Exposure trials, selecting the appropriate referent whether or not the request was implausible (although adults selected the correct referent more often in both conditions).
 
 \begin{figure}[t]
 \centering
@@ -99,7 +99,7 @@ First, we asked whether participants selected the correct referent in each condi
    \label{fig:exp1_results}
 \end{figure}
 
-Did this exposure to a Plausible vs. Implausible speaker change participants' expectations on the ambiguous Test trials? Figure~\ref{fig:exp1_results} shows the proportion of both children and adults who selected the plausible referent at test in both conditions. As predicted, both groups were sensitive to the manipulation, selecting the plausible referent more often in the Plausible Speaker condition. While children children were overall more likely to pick the plausible referent in both conditions, the effect size of the difference between conditions was nearly identical in adults and children, indicating equal adaptation to the Plausible vs. Implausible speaker ($d_{adult} =1.09$, $d_{child} = 1.10$). To confirm these findings formally, we again fit a mixed effects regression predicting choice on Test trials from group (child vs. adult), condition (Plausible vs. Implausible Speaker), and their interaction. Both of the main effects were significant, but the interaction was not, indicating that both children and adults were more likely to select the plausible referent on ambiguous test trials when the speaker had previously referred to plausible referent on unambiguous Exposure trials ($\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$, $\beta_{Plausible Speaker} = 2.33$,  $z = 4.40$, $p <.001$,  $\beta_{child \: x \: condition} = -1.01$,  $z = -1.53$, $p = .13$).
+Did this exposure to a Plausible vs. Implausible speaker change participants' expectations on the ambiguous Test trials? Figure~\ref{fig:exp1_results} shows the proportion of both children and adults who selected the plausible referent at test in both conditions. As predicted, both groups were sensitive to the manipulation, selecting the plausible referent more often in the Plausible Speaker condition. While children were overall more likely to pick the plausible referent in both conditions, the effect size of the difference between conditions was nearly identical in adults and children, indicating equal adaptation to the Plausible vs. Implausible speaker ($d_{adult} =1.09$, $d_{child} = 1.10$). To confirm these findings formally, we again fit a mixed-effects regression predicting choice on Test trials from group (child vs. adult), condition (Plausible vs. Implausible Speaker), and their interaction. Both of the main effects were significant, but the interaction was not, indicating that both children and adults were more likely to select the plausible referent on ambiguous test trials when the speaker had previously referred to plausible referent on unambiguous Exposure trials ($\beta_{child} = 1.96$,  $z = 3.33$, $p <.001$, $\beta_{Plausible Speaker} = 2.33$,  $z = 4.40$, $p <.001$,  $\beta_{child \: x \: condition} = -1.01$,  $z = -1.53$, $p = .13$).
 
 When children and adults were exposed to a speaker who was likely to produce semantically implausible utterances (e.g. ``my cat has three little hammers''), they were more likely to interpret ambiguous utterances literally instead of error-correcting to a more semantically plausible alternative. Intriguingly, the size of this adaptation was nearly identical in both groups, suggesting that preschoolers are already adapting as rapidly as adults. Children were, however, more likely overall to pick the plausible referent during ambiguous test trials, suggesting that they generally rely more on their expectations than do adults. This finding is consonant with other evidence showing significantly more noise in children's perceptual systems \cite{neuman1983}.
 
@@ -107,13 +107,13 @@ When children and adults were exposed to a speaker who was likely to produce sem
 
 Experiment 1 shows that children, to the same degree as adults, flexibly adapt their on-line language processing in accord with their expectations about what a speaker is likely to say. In Experiment 2, we replicate this finding and also test a further prediction of the noisy channel framework for language processing: children should adapt to the reliability of the acoustic signal. As speech becomes noisier, and thus harder to hear, listeners should rely more on their expectations. 
 
-In addition, because all of the Test trials asked the listener to select the semantically implausible referent, it is possible that exposure to an Implausible speaker induced listeners to select the implausible referent at test generally, independent of their acoustic input.  In Experiment 2, we provide a Control condition in which the Implausible speaker from training asked for the semantically plausible referent at test. If children inferred from the unambiguous Exposure trials that the goal of the game was to pick the ``silly'' referent, they should have continued to select the implausible referent on Test trials. In contrast, if Exposure trials caused them to adjust the relative weights on acoustic information and linguistic expectations, should instead have selected the plausible referent at test.
+In addition, because all of the Test trials asked the listener to select the semantically implausible referent, it is possible that exposure to an Implausible speaker induced listeners to select the implausible referent at test generally, independent of their acoustic input.  In Experiment 2, we provide a Control condition in which the Implausible speaker from training asked for the semantically plausible referent at test. If children inferred from the unambiguous Exposure trials that the goal of the game was to pick the ``silly'' referent, they should have continued to select the implausible referent on Test trials. In contrast, if Exposure trials caused them to adjust the relative weights on acoustic information and linguistic expectations, they should instead have selected the plausible referent at test.
 
 \subsection{Method}
 
 \subsubsection{Participants}
 
-Children for Experiment 2 were recruited from the floor of the San Jose Children's Discovery museum. An experimenter approached the child and parent and obtained informed consent before inviting both to enter a separate room in which an iPad and camera were set up. Data from a total of 114 children were collected, 1 of whom was excluded for insufficient exposure to English and 2 who were excluded for parent-reported developmental disabilities. As before, children were recruited until at least 20 had been run in each condition. Children's ages and sexes were again comparable across conditions (Plausible, Noisy -- 26 children, 12 girls, age: mean = 4.98, min = 4.02, max = 5.94; Implausible, Noisy -- 24 children, 11 girls, age: mean = 5.01, max = 5.92, min = 4.01, Plausible, No Noise = 21 children, 8 girls, age: mean = 4.89, max = 5.93, min = 4.1, Implausible, No Noise --- 20 children, 12 girls, age: mean = 4.98, max = 5.83, min = 4, Control --- 20 children, 11 girls, age: mean = 4.96, max = 5,91, min = 4.15).
+For Experiment 2, children were recruited from the floor of the San Jose Children's Discovery museum. An experimenter approached the child and parent and obtained informed consent before inviting both to enter a separate room in which an iPad and camera were set up. Data from a total of 114 children were collected, 1 of whom was excluded for insufficient exposure to English and 2 who were excluded for parent-reported developmental disabilities. As before, children were recruited until at least 20 had been run in each condition. Children's ages and sexes were again comparable across conditions (Plausible, Noisy -- 26 children, 12 girls, age: mean = 4.98, min = 4.02, max = 5.94; Implausible, Noisy -- 24 children, 11 girls, age: mean = 5.01, max = 5.92, min = 4.01, Plausible, No Noise = 21 children, 8 girls, age: mean = 4.89, max = 5.93, min = 4.1, Implausible, No Noise --- 20 children, 12 girls, age: mean = 4.98, max = 5.83, min = 4, Control --- 20 children, 11 girls, age: mean = 4.96, max = 5,91, min = 4.15).
  
 \subsubsection{Stimuli, Design, \& Procedure}
 
@@ -128,20 +128,20 @@ Second, we again compared the conditions to each other, fitting a mixed-effects 
 \begin{figure}[t]
      \centering
      \includegraphics[width=5in]{figures/exp2_results.pdf}
-    \caption{Experiment 2 Test trial responses. Replicating Experiment 1, children were more likely to correct the phonological error during test trials when they were previously exposed to a Plausible speaker. In addition, as predicted, in both conditions children were more likely to correct the error when the speech was noisier. Finally, children in a control condition in which a previously Implausible speaker referred to \emph{plausible} referents during ambiguous Test trials reliably selected the plausible referent. Together, these results show that children adaptively integrate both bottom-up acoustic information and top-down expectations about the speaker when processing language. Bars show group-averaged proportion of plausible item selection at test, error bars show 95\% confidence intervals computed by non-parametric bootstrap. The dotted line indicates chance performance.}%
+    \caption{Experiment 2 Test trial responses. Replicating Experiment 1, children were more likely to correct the phonological error during test trials when they were previously exposed to a Plausible speaker. In addition, as predicted, in both conditions children were more likely to correct the error when the speech was noisier. Finally, when children were tested in a control, in which a previously Implausible speaker referred to \emph{plausible} referents during ambiguous Test trials, they reliably selected the plausible referent. Together, these results show that children adaptively integrate both bottom-up acoustic information and top-down expectations about the speaker when processing language. Bars show group-averaged proportion of plausible item selection at test, error bars show 95\% confidence intervals computed by non-parametric bootstrap. The dotted line indicates chance performance.}%
    \label{fig:exp2_results}
 \end{figure}
 
-Did children integrate the noise level of the acoustic stimuli with speaker expectations on the ambiguous Test trials? Figure~\ref{fig:exp2_results} shows the proportion of trials on which children selected the plausible referent at test in both speaker and noise conditions. As predicted, children showed sensitivity to both speaker reliability and acoustic noise. Children selected the plausible referent at test, correcting the error in their acoustic input, more often when the speaker had said plausible things on Exposure trials (as in Experiment 1). In addition, regardless of Speaker plausibility, children selected the plausible referent more frequently when the acoustic input was noisy. To quantify this pattern, we again fit a mixed effects regression predicting choice on test trials from Speaker type and Noise level as well as their interaction. As predicted, both main effects were significant ($\beta_{1.20} = 1.96$,  $z = 3.20$, $p <.001$, $\beta_{Noisy} = .81$,  $z = 2.21$, $p = .03$), but their interaction was not ($\beta_{Plausible \: x \: Noisy} = .33$,  $z = .65$, $p = .51$).
+Did children integrate the noise level of the acoustic stimuli with speaker expectations on the ambiguous Test trials? Figure~\ref{fig:exp2_results} shows the proportion of trials on which children selected the plausible referent at test in both speaker and noise conditions. As predicted, children showed sensitivity to both speaker reliability and acoustic noise. Children selected the plausible referent at test, correcting the error in their acoustic input, more often when the speaker had said plausible things on Exposure trials (as in Experiment 1). In addition, regardless of Speaker plausibility, children selected the plausible referent more frequently when the acoustic input was noisy. To quantify this pattern, we again fit a mixed-effects regression predicting choice on test trials from Speaker type and Noise level as well as their interaction. As predicted, both main effects were significant ($\beta_{1.20} = 1.96$,  $z = 3.20$, $p <.001$, $\beta_{Noisy} = .81$,  $z = 2.21$, $p = .03$), but their interaction was not ($\beta_{Plausible \: x \: Noisy} = .33$,  $z = .65$, $p = .51$).
 
-Finally, one alternative explanation for the difference between Speaker conditions is that children simply followed their expectations at all times, e.g., that they chose ``silly'' responses regardless of the question. To test this alternative, we asked whether children who responded to an Implausible speaker on Exposure trials always chose the implausible referent on test trials even when the speaker referred to the \emph{plausible} referent (Implausible Control condition). A mixed effects model estimating plausible referent selection on Test trials showed that compared to the Plausible speaker, children exposed to the Implausible speaker were less likely to pick the plausible referent ($\beta_{Implausible} = -1.57$,  $z = -4.14$, $p <.001$), but children in the Control condition were \emph{more} likely to select the plausible referent ($\beta_{Control} = 1.06$,  $z = 2.05$, $p = .04$). Thus, children who were asked for the plausible referent at Test selected it, even when the speaker had previously always referred to the implausible referent. This Control condition provides further evidence that children were attending to and responding to the acoustic input from the speaker on Test trials, and not just relying on their prior expectations.
+Finally, one alternative explanation for the difference between Speaker conditions is that children simply followed their expectations at all times, e.g., that they chose ``silly'' responses regardless of the question. To test this alternative, we asked whether children who responded to an Implausible speaker on Exposure trials always chose the implausible referent on test trials even when the speaker referred to the \emph{plausible} referent (Implausible Control condition). A mixed-effects model estimating plausible referent selection on Test trials showed that compared to the Plausible speaker, children exposed to the Implausible speaker were less likely to pick the plausible referent ($\beta_{Implausible} = -1.57$,  $z = -4.14$, $p <.001$), but children in the Control condition were \emph{more} likely to select the plausible referent ($\beta_{Control} = 1.06$,  $z = 2.05$, $p = .04$). Thus, children who were asked for the plausible referent at Test selected it, even when the speaker had previously always referred to the implausible referent. This Control condition provides further evidence that children were attending to and responding to the acoustic input from the speaker on Test trials, and not just relying on their prior expectations.
 
 
 \section{General Discussion}
 
-When we use language to communicate, we are doing more than processing the sounds hear; we are trying to infer the speaker's intended meaning \cite{clark1996}. Because of the noise and ambiguity inherent in linguistic communication, our expectations about what speakers are likely to say play an important role in resolving interpretive ambiguities \cite{grice1975, frank2012}. But how much should listeners rely on the acoustic signal and how much should they rely on their expectations? Ideal observer models of this kind of cue integration predict that each cue should be weighted in proportion to its reliability \cite{jacobs1999, ernst2002}. This prediction is borne out in adult listeners across domains in language processing from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006, kleinschmidt2015}. The experiments in this paper provide evidence that this adaptive expectation-based language processing is already available to 4--5 year old children. Not only do preschoolers combine their expectations about a speaker's likely utterance with the speech they are hearing, they flexibly re-weigh their reliance on each as they develop stronger expectations about the speaker and as the speech signal changes in clarity.
+When we use language to communicate, we are doing more than processing the sounds we hear; we are trying to infer the speaker's intended meaning \cite{clark1996}. Because of the noise and ambiguity inherent in linguistic communication, our expectations about what speakers are likely to say play an important role in resolving interpretive ambiguities \cite{grice1975, frank2012}. But how much should listeners rely on the acoustic signal and how much should they rely on their expectations? Ideal observer models of this kind of cue integration predict that each cue should be weighted in proportion to its reliability \cite{jacobs1999, ernst2002}. This prediction is borne out in adult listeners across domains in language processing from phonology to syntax \cite<e.g.,>{gibson2013, mcclelland2006, kleinschmidt2015}. The experiments in this paper provide evidence that this adaptive expectation-based language processing is already available to 4--5 year old children. Not only do preschoolers combine their expectations about a speaker's likely utterance with the speech they are hearing, they flexibly re-weigh their reliance on each as they develop stronger expectations about the speaker and as the speech signal changes in clarity.
 
-Intriguingly, while the size of the adaptation effect was nearly identical in both children and adults, their baseline reliance on perceptual vs. linguistic cues was not: Children relied more on their linguistic expectations than the perceptual signal. Because of the greater noise inherent in young children's perceptual processing systems, the same acoustic stimulus may effectively be less reliable for children than adults \cite{neuman1983, lyons2011}. Relatedly, the noisy channel framework makes a clear prediction about integration in atypical populations: Children whose acoustic processing is impaired, (e.g., with cochlear implants) should rely relatively more on their expectations, whereas children with impaired higher-level linguistic expectations (e.g., children with specific language impairment) should rely more the acoustic signal.
+While the size of the adaptation effect was nearly identical in both children and adults, their baseline reliance on perceptual vs. linguistic cues was not: Children relied more on their top-down expectations than the perceptual signal. Because of the greater noise inherent in young children's perceptual processing systems, the same acoustic stimulus may effectively be less reliable for children than adults \cite{neuman1983, lyons2011}. Relatedly, the noisy channel framework makes a clear prediction about integration in atypical populations: Children whose acoustic processing is impaired (e.g., with cochlear implants) should rely relatively more on their expectations, whereas children with impaired higher-level linguistic expectations (e.g., children with specific language impairment) should rely more the acoustic signal.
 
 One puzzle of the broader literature on the development of language comprehension is that children appear to integrate information in an adult-like way in some language processing tasks but not others. A priori, we would predict that children's use of higher-level expectations should be relative to the reliability of their model of the relevant domain. Thus, children should---and do---integrate expectations when the relevant models are over speech sounds, speakers, or semantic plausibility \cite<e.g.,>{clark2009, creel2012, harris2012}. On the other hand, children tend to fail in cases where the relevant models include difficult linguistic content like quantifier semantics or complex syntactic constructions \cite<e.g.,>{trueswell1999, noveck2001}. 
 % However, based on prior evidence that children's understanding of quantifiers is limited, as is their exposure to relative clauses, this is exactly the result a noisy channel framework for speech processing would predict  \cite{barner2011, montag2015}.
